[project]
name = "video-converter"
version = "0.1.0"
description = "A video converter for space-saving and Plex."
authors = [
    {name = "Jacob McIntosh",email = "nacitar.sevaht@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sevaht-utility @ git+https://github.com/nacitar/sevaht-utility.git@main"
]

[tool.poetry]
packages = [{include = "video_converter", from = "src"}]

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
mypy = "^1.20.2"
pytest = "^9.0.3"
ruff = "^0.15.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.isort]
line_length = 79
profile = "black"

[tool.mypy]
strict = true

[tool.poetry.scripts]
video-converter = "video_converter.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-ignore = ["E203", "E501", "COM812", "COM819"]
select = [
    "E", "F", "N", "UP", "ANN", "TCH", "TC",
    "A", "I", "C4", "B", "SIM", "PERF", "PTH", "RET", "TRY", "Q",
    "RUF", "DTZ", "ERA", "PIE", "TID", "S", "FA",
    "FURB", "PGH", "BLE", "FLY", "RSE", "COM",
    "ISC", "ASYNC", "LOG", "ARG",
    "TD", "PLW", "EM",
    "PLR", "C90"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004"]
